alpm-types/src/snapshots/openpgp::invalid_packager@case_3_no_wrapped_address.snap
---
source: alpm-types/src/openpgp.rs
---
Parser failed with the following error:
Foobar McFooface
                ^
invalid packager
expected opening delimiter '<' for email address
